--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.7.13",
     "node-gyp": "^6.0.1",
     "passport": "^0.4.1",
